Created outline for Controller and Service layer along with Basic Auth secuirity configurations.
