# swagger/IntraPayment_OpenApi_Specification_V1.yaml
@@ -141,34 +141,36 @@ components:
     AccountDetailsResponse:
       type: array
       items:
-        type: object
-        required:
-          - account_id
-          - currency
-          - balance
-          - account_status
-        properties:
-          account_id:
-            type: integer
-            format: int64
-            example: 111
-          currency:
-            type: string
-            enum:
-              - GBP
-              - NOK
-              - EUR
-            example: GBP
-          balance:
-            type: string
-            example: "100.00"
-            pattern: '^[0-9]+\.[0-9]{2}$'
-          account_status:
-            type: string
-            enum:
-              - ACTIVE
-              - DELETED
-            example: "ACTIVE"
+        $ref: '#/components/schemas/AccountDetailsResponseData'
+    AccountDetailsResponseData:
+      type: object
+      required:
+        - account_id
+        - currency
+        - balance
+        - account_status
+      properties:
+        account_id:
+          type: integer
+          format: int64
+          example: 111
+        currency:
+          type: string
+          enum:
+            - GBP
+            - NOK
+            - EUR
+          example: GBP
+        balance:
+          type: string
+          example: "100.00"
+          pattern: '^[0-9]+\.[0-9]{2}$'
+        account_status:
+          type: string
+          enum:
+            - ACTIVE
+            - DELETED
+          example: "ACTIVE"
 
     AccountBalanceResponse:
       type: object
@@ -196,38 +198,41 @@ components:
     AccountStatementResponse:
       type: array
       items:
-        type: object
-        required:
-          - account_id
-          - currency
-          - amount
-          - type
-          - transaction_date
-        properties:
-          account_id:
-            type: integer
-            format: int64
-            example: 111
-          currency:
-            type: string
-            enum:
-              - GBP
-              - NOK
-              - EUR
-            example: GBP
-          amount:
-            type: string
-            example: "100.00"
-            pattern: '^[0-9]+\.[0-9]{2}$'
-          type:
-            type: string
-            enum:
-              - DEBIT
-              - CREDIT
-            example: "DEBIT"
-          transaction_date:
-            type: string
-            example: "2021-08-05T12:30:10Z"
+        $ref: '#/components/schemas/AccountStatementResponseData'
+
+    AccountStatementResponseData:
+      type: object
+      required:
+        - account_id
+        - currency
+        - amount
+        - type
+        - transaction_date
+      properties:
+        account_id:
+          type: integer
+          format: int64
+          example: 111
+        currency:
+          type: string
+          enum:
+            - GBP
+            - NOK
+            - EUR
+          example: GBP
+        amount:
+          type: string
+          example: "100.00"
+          pattern: '^[0-9]+\.[0-9]{2}$'
+        type:
+          type: string
+          enum:
+            - DEBIT
+            - CREDIT
+          example: "DEBIT"
+        transaction_date:
+          type: string
+          example: "2021-08-05T12:30:10Z"
     PaymentTransferRequest:
       type: object
       required:
